--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,90 +1,117 @@
 <header class="header block">
-   <div class="wrap">
-      <div class="header__top">
-         <div class="header__logo">
-            <img src="img/logo.png" alt="logo" class="logo">
-            <p class="text">Избавит вас от всех паразитов&nbsp;<br>
-               без побочных эффектов! </p>
-         </div>
-         <ul class="header__list">
-            <li class="item">
-               <a href="#others" class="link js-scroll">
-                  <i class="fico fico-header-icon-1"></i>
-                  Подходит для всей семьи</a>
-            </li>
-            <li class="item">
-               <a href="#components" class="link js-scroll">
-                  <i class="fico fico-header-icon-2"></i>
-                  Натуральный состав
-               </a>
-            </li>
-            <li class="item">
-               <a href="#comments" class="link js-scroll">
-                  <i class="fico fico-header-icon-3"></i>
-                  Отзывы
-               </a>
-            </li>
-         </ul>
+  <div class="wrap">
+    <div class="header__top">
+      <div class="header__logo">
+        <img src="img/logo.png" alt="logo" class="logo" />
+        <p class="text">
+          Избавит вас от всех паразитов&nbsp;<br />
+          без побочных эффектов!
+        </p>
       </div>
-      <div class="header__main">
-         <div class="info header__info">
-            <h1 class="title header__title">Мощная чистка организма&nbsp;<br> от паразитов <span class="jade">3 в 1</span>
-            </h1>
-            <ul class="info__list">
-               <li class="item"><b class="font-bold">Выводит</b> все виды&nbsp;<br>паразитов, их личинки и яйца</li>
-               <li class="item"><b class="font-bold">Восстанавливает</b>&nbsp;<br>
-                  поврежденные паразитами органы</li>
-               <li class="item"><b class="font-bold">Создает защиту</b>&nbsp;<br>от повторного заражения на 2&nbsp;года</li>
-            </ul>
-            <div class="info__cost">
-               Оплата при получении
-               <i class="fico fico-cost"></i>
+      <ul class="header__list">
+        <li class="item">
+          <a href="#others" class="link js-scroll">
+            <i class="fico fico-header-icon-1"></i> Подходит для всей семьи</a
+          >
+        </li>
+        <li class="item">
+          <a href="#components" class="link js-scroll">
+            <i class="fico fico-header-icon-2"></i> Натуральный состав
+          </a>
+        </li>
+        <li class="item">
+          <a href="#comments" class="link js-scroll">
+            <i class="fico fico-header-icon-3"></i> Отзывы
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="header__main">
+      <div class="info header__info">
+        <h1 class="title header__title">
+          Мощная чистка организма&nbsp;<br />
+          от паразитов <span class="jade">3 в 1</span>
+        </h1>
+        <ul class="info__list">
+          <li class="item">
+            <b class="font-bold">Выводит</b> все виды&nbsp;<br />паразитов, их
+            личинки и яйца
+          </li>
+          <li class="item">
+            <b class="font-bold">Восстанавливает</b>&nbsp;<br />
+            поврежденные паразитами органы
+          </li>
+          <li class="item">
+            <b class="font-bold">Создает защиту</b>&nbsp;<br />от повторного
+            заражения на 2&nbsp;года
+          </li>
+        </ul>
+        <div class="info__cost">
+          Оплата при получении <i class="fico fico-cost"></i>
+        </div>
+        <img src="img/product.png" alt="product" class="product" />
+      </div>
+      <img src="img/people.png" alt="people" class="people" />
+      <div class="order-form">
+        <form action="/submit" method="post" class="x_order_form form">
+          <p class="form__date">
+            Успейте заказать<br />со скидкой<br /><span class="jade">до</span>
+            <span class="date-0">31.12.2018</span>
+          </p>
+          <div class="form__price">
+            <div class="old">
+              <p class="old__text">Старая цена</p>
+              <p class="old__line">
+                <span class="old__value x_price_previous">1980</span
+                ><span class="old__current x_currency">руб</span>
+              </p>
             </div>
-            <img src="img/product.png" alt="product" class="product">
-         </div>
-         <img src="img/people.png" alt="people" class="people">
-         <div class="order-form">
-            <form action="/submit" method="post" class="x_order_form form">
-               <p class="form__date">
-                  Успейте заказать<br>со скидкой<br><span class="jade">до</span> <span class="date-0">31.12.2018</span>
-               </p>
-               <div class="form__price">
-                  <div class="old">
-                     <p class="old__text">Старая цена</p>
-                     <p class="old__line">
-                        <span class="old__value x_price_previous">1980</span><span class="old__current x_currency">руб</span>
-                     </p>
-                  </div>
-                  <div class="new">
-                     <p class="new__text">Новая цена</p>
-                     <p class="new__back">
-                        <span class="new__value x_price_current">990</span><span class="new__current x_currency">руб</span><span
-                           class="note">*</span>
-                     </p>
-                  </div>
-               </div>
+            <div class="new">
+              <p class="new__text">Новая цена</p>
+              <p class="new__back">
+                <span class="new__value x_price_current">990</span
+                ><span class="new__current x_currency">руб</span
+                ><span class="note">*</span>
+              </p>
+            </div>
+          </div>
 
-               <div class="input-wrap">
-                  <i class="fico fico-name"></i>
-                  <input class="input" type="text" name="name" placeholder="Мое имя" required="" autocomplete="name" />
-               </div>
-               <div class="input-wrap">
-                  <i class="fico fico-tel"></i><input class="input" type="tel" name="phone" placeholder="Мой телефон"
-                     required="" autocomplete="tel" />
-               </div>
-               <button type="submit" class="btn form__btn">
-                  Заказать <small class="small">co скидкой</small>
-               </button>
-               <span class="foodnote">* при заказе курса</span>
-               <div class="leftovers">
-                  Осталось <span class="lastpack">10</span> упаковок<small>&nbsp;<br>по скидке</small>
-               </div>
-               <div class="protection">
-                  <i class="fico fico-protection"></i>
-                  Ваши данные защищены!
-               </div>
-            </form>
-         </div>
+          <div class="input-wrap">
+            <i class="fico fico-name"></i>
+            <input
+              class="input"
+              type="text"
+              name="name"
+              placeholder="Мое имя"
+              required=""
+              autocomplete="name"
+            />
+          </div>
+          <div class="input-wrap">
+            <i class="fico fico-tel"></i
+            ><input
+              class="input"
+              type="tel"
+              name="phone"
+              placeholder="Мой телефон"
+              required=""
+              autocomplete="tel"
+            />
+          </div>
+          <button type="submit" class="btn form__btn">
+            Заказать <small class="small">co скидкой</small>
+          </button>
+          <span class="foodnote">* при заказе курса</span>
+          <div class="leftovers">
+            Осталось <span class="lastpack">10</span> упаковок<small
+              >&nbsp;<br />по скидке</small
+            >
+          </div>
+          <div class="protection">
+            <i class="fico fico-protection"></i> Ваши данные защищены!
+          </div>
+        </form>
       </div>
-   </div>
+    </div>
+  </div>
 </header>
