--- a/src/template/order.html
+++ b/src/template/order.html
@@ -1,27 +1,27 @@
 <section class="order block">
-    <div class="wrap">
-        <div class="title">Как заказать бесплатную доставку<br>&nbsp;Helmion</div>
-        <div class="order-content">
-        	<div class="order-content-box">
-        		<div class="order-content-box__img od-img1"><img src="img/order1.png" alt="order"></div>
-        		<div class="order-content-box__title">Заполните форму заказа</div>
-        		<div class="order-content-box__subtitle">Укажите только свое имя и номер<br>&nbsp;телефона</div>
-        	</div>
-        	<div class="order-content-box order-content-box2">
-        		<div class="order-content-box__img od-img2"><img src="img/order2.png" alt="order"></div>
-        		<div class="order-content-box__title">Ответьте на звонок<br>&nbsp;оператора</div>
-        		<div class="order-content-box__subtitle">Он уточнит ваши адресные<br>&nbsp;данные</div>
-        	</div>
-        	<div class="order-content-box">
-        		<div class="order-content-box__img od-img3"><img src="img/order3.png" alt="order"></div>
-        		<div class="order-content-box__title">Оплатите после получения</div>
-        		<div class="order-content-box__subtitle">Доставка бесплатная</div>
-        	</div>
-        </div>
-        <div class="btn order__btn ever-popup-btn">Без предоплаты</div>
-        <div class="order__text">Вы можете прямо сейчас <b>получить бесплатную консультацию</b> специалиста.&nbsp;<br>
-Укажите свое имя и номер телефона в форме для заявки и нажмите кнопку заказа.&nbsp;<br>
-Наш оператор Вам перезвонит в ближайшее время.
-</div>
-    </div>
+	<div class="wrap">
+		<div class="title">Как заказать доставку<br>&nbsp;Helmion</div>
+		<div class="order-content">
+			<div class="order-content-box">
+				<div class="order-content-box__img od-img1"><img src="img/order1.png" alt="order"></div>
+				<div class="order-content-box__title">Заполните форму заказа</div>
+				<div class="order-content-box__subtitle">Укажите только свое имя и номер<br>&nbsp;телефона</div>
+			</div>
+			<div class="order-content-box order-content-box2">
+				<div class="order-content-box__img od-img2"><img src="img/order2.png" alt="order"></div>
+				<div class="order-content-box__title">Ответьте на звонок<br>&nbsp;оператора</div>
+				<div class="order-content-box__subtitle">Он уточнит ваши адресные<br>&nbsp;данные</div>
+			</div>
+			<div class="order-content-box">
+				<div class="order-content-box__img od-img3"><img src="img/order3.png" alt="order"></div>
+				<div class="order-content-box__title">Оплатите после получения</div>
+				<div class="order-content-box__subtitle">Оплата после проверки</div>
+			</div>
+		</div>
+		<div class="btn order__btn ever-popup-btn">Без предоплаты</div>
+		<div class="order__text">Вы можете прямо сейчас <b>получить бесплатную консультацию</b> специалиста.&nbsp;<br>
+			Укажите свое имя и номер телефона в форме для заявки и нажмите кнопку заказа.&nbsp;<br>
+			Наш оператор Вам перезвонит в ближайшее время.
+		</div>
+	</div>
 </section>
