--- a/src/template/others.html
+++ b/src/template/others.html
@@ -14,7 +14,7 @@
             </div>
             <div class="others-content-box">
                 <div class="others-content-box__title">3 упаковки пробиотиков</div>
-                <div class="others-content-box__subtitle">на 1,5 месяца восстановление</div>
+                <div class="others-content-box__subtitle">на 1,5 месяца восстановления</div>
                 <img class="others-content-box__img other-width" src="img/other-pack2.png" alt="other">
                 <div class="others-content-box__for">Для восстановления иммунитета</div>
                 <div class="others-content-box__price">от <span>1000</span>руб.</div>
