--- a/src/template/parasites.html
+++ b/src/template/parasites.html
@@ -12,8 +12,7 @@
                     <div class="parasites-img">
                         <img src="img/parasites1.jpg" alt="">
                     </div>
-                    <p class="parasites-fixed__text"><span class="font-bold">Enterobius Vermicularis</span> (острицы) общественным
-                        транспортом</p>
+                    <p class="parasites-fixed__text"><span class="font-bold">Enterobius Vermicularis</span> (острицы)</p>
                 </div>
                 <div class="parasites-fixed__item">
                     <div class="parasites-img">
@@ -92,4 +91,3 @@
         </div>
     </div>
 </div>
-
