--- a/src/template/sec5.html
+++ b/src/template/sec5.html
@@ -9,7 +9,7 @@
           <div class="methods__image-block">
             <img src="img/methods_grass.png" class="methods__image" />
           </div>
-          <div class="methods__item-title">Методы на трава</div>
+          <div class="methods__item-title">Методы на травах</div>
           <div class="methods__text-block">
             <p class="methods__text">
               Благотворно влияют на иммунитет, мягко выводят паразитов, но
