--- a/src/style/partials/parasites.scss
+++ b/src/style/partials/parasites.scss
@@ -17,14 +17,14 @@
     z-index: 10;
     cursor: pointer;
     opacity: 0.7;
-    
+
     &:before {
       content: "";
       width: 20px;
       height: 19px;
       background: url("../img/svg/arrow-parasites.svg");
     }
-    
+
   }
 
   .slick-prev {
@@ -47,7 +47,7 @@
 
   @include r(479) {
     .slick-next, .slick-prev {
-      top: 335px;
+      top: 300px;
     }
   }
 
@@ -122,13 +122,9 @@
     min-height: 44px;
   }
 
-  @include r(639) {
-    min-height: 66px;
-  }
-
   @include r(479) {
     font-size: 14px;
-    min-height: 95px;
+    min-height: 57px;
   }
 
 }
@@ -167,6 +163,22 @@
 
   @include r(1199) {
     width: 210px;
+  }
+
+  @include r(1023) {
+    width: 224px;
+  }
+
+  @include r(767) {
+    width: 320px;
+  }
+
+  @include r(767) {
+    width: 230px;
+  }
+
+  @include r(767) {
+    width: 160px;
   }
 
 }
@@ -254,7 +266,8 @@
   }
 
   @include r(479) {
-    min-height: 212px;
+    //min-height: 212px;
+    min-height: 174px;
   }
 
 }
