--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -8,6 +8,7 @@
 
 // @import "partials/sprite-svg"
 
+@import "partials/font-icons"
 
 @import "partials/slick.scss"
 @import "partials/slick-theme.scss"
