--- a/src/style/partials/advantages.sass
+++ b/src/style/partials/advantages.sass
@@ -74,7 +74,9 @@
 				left: 329px
 				bottom: 50px
 			+r(1023)
-
+				left: auto
+				right: 20px
+				bottom: -462px
 	&__cost
 		width: 312px
 		padding-left: 45px
