--- a/src/template/material.html
+++ b/src/template/material.html
@@ -1,5 +1,5 @@
 <!-- /.material -->
-<section class="material block">
+<section class="material block" id="material">
     <div class="wrap">
         <h2 class="title title-material">По данным Минздрава</h2>
         <p class="subtitle-material">в условиях жизни в СНГ среднестатистический житель<br> <span class="text-bold">не
