--- a/src/style/partials/comments.scss
+++ b/src/style/partials/comments.scss
@@ -233,3 +233,14 @@
 		height: 445px;
 	}
 }
+
+
+@keyframes onload {
+	0% {
+		transform: translate(-50%, -50%) rotate(0deg);
+	}
+
+	100% {
+		transform: translate(-50%, -50%) rotate(360deg);
+	}
+}
