--- a/src/style/partials/footer.scss
+++ b/src/style/partials/footer.scss
@@ -25,6 +25,8 @@
 	display: block;
 	color: #666666;
 	margin-bottom: 5px;
+	text-decoration: none;
+	transition: all .2s;
 
 	&:hover {
 		text-decoration: underline;
