--- a/src/style/partials/order.sass
+++ b/src/style/partials/order.sass
@@ -220,9 +220,11 @@
 			&-box
 				width: 100%
 				margin: 10px
+				+nlt
+					margin-bottom: 20px
 				&__title
 					font-size: 18px
-					margin-top: 15px
+					margin-top: 10px
 					br
 						display: none
 					
