--- a/src/template/advantages.html
+++ b/src/template/advantages.html
@@ -2,13 +2,13 @@
    <div class="wrap">
       <div class="advantages__content">
          <div class="info advantages__info">
-            <h2 class="title advantages__title">Helmion — полное избавление&nbsp;<br> от паразитов с эффектом <span
-                  class="jade">3
+            <h2 class="title advantages__title wow fadeInDown">Helmion — полное избавление&nbsp;<br> от паразитов с
+               эффектом <span class="jade">3
                   в 1</span></h2>
             <ul class="info__list">
                <li class="item">Выводит все виды
-                  паразитов&nbsp;<br> и их яйца</li>
-               <li class="item">Укрепляет иммунитет и восстанавливает поврежденный паразитами организм </li>
+                  паразитов&nbsp;<br> и&nbsp;их яйца</li>
+               <li class="item">Укрепляет иммунитет и&nbsp;восстанавливает поврежденный паразитами организм </li>
                <li class="item">Создает естественную защиту от повторных заражений </li>
             </ul>
             <div class="info__cost advantages__cost">
