--- a/src/template/comments.html
+++ b/src/template/comments.html
@@ -1,7 +1,7 @@
 <!-- /.comments block -->
 <section class="comments block" id="comments">
     <div class="wrap">
-        <h2 class="title title-comments">Комментарии о Helmion</h2>
+        <h2 class="title title-comments wow fadeInDown">Комментарии о Helmion</h2>
         <div class="comments__wrap">
             <p class="comments__count">95 комментариев</p>
             <div class="comments__main">
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="comments__item">
+                <div class="comments__item comments__item--last">
                     <div class="comments__ava">
                         <img src="img/comments12.jpg" alt="Дарина Николаева">
                     </div>
@@ -226,6 +226,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="loader"></div>
             </div>
         </div>
     </div>
