--- a/src/template/components.html
+++ b/src/template/components.html
@@ -1,11 +1,11 @@
 <!-- /.components -->
 <section class="components block" id="components">
     <div class="wrap">
-        <h2 class="title title-components">Helmion избавляет от всех видов паразитов</h2>
-        <p class="subtitle-components">благодаря уникальной растительной формуле</p>
+        <h2 class="title title-components wow fadeInDown">Helmion избавляет от всех видов паразитов</h2>
+        <p class="subtitle-components wow fadeInDown" data-wow-delay="0.1s">благодаря уникальной растительной формуле</p>
 
         <div class="components__wrap">
-            <div class="components__item">
+            <div class="components__item wow fadeInDown" data-wow-delay="0.2s">
                 <div class="components__group">
                     <div class="components__img components__img-1">
                         <img src="img/comp1.png" alt="малотус филипинский">
@@ -21,7 +21,7 @@
                 <div class="components__line"></div>
                 <p class="components__action">уничтожают все виды паразитов и их яйца</p>
             </div>
-            <div class="components__item">
+            <div class="components__item wow fadeInDown" data-wow-delay="0.3s">
                 <div class="components__group">
                     <div class="components__img components__img-1">
                         <img src="img/comp4.png" alt="Сыть круглая">
@@ -37,7 +37,7 @@
                 <div class="components__line"></div>
                 <p class="components__action">восстанавливают иммунитет и&nbsp;заживляют поврежденные паразитами органы</p>
             </div>
-            <div class="components__item">
+            <div class="components__item wow fadeInDown" data-wow-delay="0.4s">
                 <div class="components__group">
                     <div class="components__img components__img-1">
                         <img src="img/comp7.png" alt="Гардения широколистная">
