--- a/src/template/material.html
+++ b/src/template/material.html
@@ -1,8 +1,9 @@
 <!-- /.material -->
 <section class="material block" id="material">
     <div class="wrap">
-        <h2 class="title title-material">По данным Минздрава</h2>
-        <p class="subtitle-material">в условиях жизни в СНГ среднестатистический житель<br> <span class="text-bold">не
+        <h2 class="title title-material wow fadeInDown">По данным Минздрава</h2>
+        <p class="subtitle-material wow fadeInDown" data-wow-delay="0.2s">в условиях жизни в СНГ среднестатистический
+            житель<br> <span class="text-bold">не
                 может уберечься от заражения паразитами</span> дольше месяца</p>
         <div class="material__wrap">
 
@@ -11,7 +12,7 @@
             </div>
 
 
-            <div class="material__main material__main-dont">
+            <div class="material__main material__main-dont wow fadeInDown" data-wow-delay="0.5s">
                 <h3 class="material__name">Человек, который<br> не заразится паразитами</h3>
                 <ul class="material__list">
                     <li class="material__item">
@@ -51,7 +52,7 @@
                 </ul>
             </div>
 
-            <div class="material__main material__main-do">
+            <div class="material__main material__main-do wow fadeInDown" data-wow-delay="0.5s">
                 <h3 class="material__name material__name-do">Человек, который<br> заразится паразитами</h3>
                 <ul class="material__list">
                     <li class="material__item material__item-do">
