--- a/src/template/others.html
+++ b/src/template/others.html
@@ -1,13 +1,16 @@
 <section class="others block" id="others">
     <div class="wrap">
-        <h2 class="title">Если применять распространенные способы,<br> вам необходимы будут 2 препарата:</h2>
+        <h2 class="title others__title wow fadeInDown">Борьба с паразитами эффективна<br> только при использовании 2-х
+            типов
+            препаратов:</h2>
+        <p class="others__desc">для выведения паразитов и&nbsp;их яиц и&nbsp;для восстановления иммунитета</p>
         <div class="others-content">
             <div class="others-content-box">
                 <div class="others-content-box__title">5 пачек аптечных таблеток</div>
                 <div class="others-content-box__subtitle">на 2 месяца лечения</div>
                 <img class="others-content-box__img" src="img/other-pack1.png" alt="other">
                 <div class="others-content-box__for">Для выведения паразитов и их яиц</div>
-                <div class="others-content-box__price">от <span>2000</span>руб.</div>
+                <div class="others-content-box__price">от <span>4500</span> руб.</div>
             </div>
             <div class="others-content-sing">
                 <div class="others-content-sing__view">+</div>
@@ -17,17 +20,18 @@
                 <div class="others-content-box__subtitle">на 1,5 месяца восстановления</div>
                 <img class="others-content-box__img other-width" src="img/other-pack2.png" alt="other">
                 <div class="others-content-box__for">Для восстановления иммунитета</div>
-                <div class="others-content-box__price">от <span>1000</span>руб.</div>
+                <div class="others-content-box__price">от <span>2500</span> руб.</div>
             </div>
             <div class="others-content-sing others-content-sing2">
                 <div class="others-content-sing__view">=</div>
             </div>
             <div class="others-content-total">
-                <div class="others-content-total__price">от <span>7000</span>руб.</div>
-                <div class="others-content-total__subtitle">за курс <br>и 3,5 месяцев лечения</div>
+                <div class="others-content-total__price">от <span>7000</span> руб.</div>
+                <div class="others-content-total__subtitle">за курс<br> и 3,5 месяца лечения</div>
             </div>
         </div>
-        <div class="others-attention">ВНИМАНИЕ! Многие аптечные средства нельзя сочетать между собой. <br>Они могут
-            вызвать непредвиденные результаты.</div>
+        <div class="others-attention wow fadeInDown" data-wow-delay="0.2s">ВНИМАНИЕ! Многие аптечные средства нельзя
+            сочетать между собой. Они могут вызвать непредвиденные результаты.
+        </div>
     </div>
 </section>
