--- a/src/template/parasites.html
+++ b/src/template/parasites.html
@@ -1,6 +1,6 @@
 <div class="block parasites">
     <div class="wrap">
-        <h2 class="title parasites-title">
+        <h2 class="title parasites-title wow fadeInDown">
             Самые распространенные виды паразитов <span>захватывают разные участки организма</span>
         </h2>
         <div class="parasites-wrap">
