--- a/src/style/partials/comments.scss
+++ b/src/style/partials/comments.scss
@@ -31,11 +31,13 @@
 	margin-bottom: 30px;
 	max-width: 960px;
 
-	&:last-child {
-		border-bottom: none;
-		margin-bottom: 0;
-		padding-bottom: 0;
-	}
+}
+
+.comments__item--last {
+
+	border-bottom: none;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 
 .comments__about {
@@ -174,6 +176,13 @@
 		margin-bottom: 20px;
 		padding-bottom: 20px;
 	}
+
+	.comments__item--last {
+
+		border-bottom: none;
+		margin-bottom: 0;
+		padding-bottom: 20px;
+	}
 }
 
 @include r(639) {
@@ -221,6 +230,7 @@
 		margin-bottom: 20px;
 	}
 
+
 	.comments__name {
 		margin-bottom: 8px;
 	}
@@ -234,13 +244,30 @@
 	}
 }
 
+.loader {
+	-webkit-animation: spin 1.5s linear infinite;
+	animation: spin 1.5s linear infinite;
+	border: 3px solid #ddd;
+	border-top: 3px solid #199489;
+	border-radius: 50%;
+	height: 35px;
+	width: 35px;
+	margin: auto;
+}
 
-@keyframes onload {
-	0% {
-		transform: translate(-50%, -50%) rotate(0deg);
+
+@-webkit-keyframes spin {
+	to {
+		border-top-color: #199489;
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
 	}
+}
 
-	100% {
-		transform: translate(-50%, -50%) rotate(360deg);
+@keyframes spin {
+	to {
+		border-top-color: #199489;
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
 	}
 }
