--- a/src/style/partials/header.sass
+++ b/src/style/partials/header.sass
@@ -6,9 +6,15 @@
 	padding-top: 31px
 	background: url('../img/header__back.jpg') no-repeat center bottom
 	background-size: cover
+	+r(1199)
+		padding-top: 30px
+		padding-bottom: 30px
+	+r(1023)
+		padding-bottom: 60px
 	.wrap
 		+r(479)
 			width: 320px
+
 	&__top
 		display: flex
 		align-items: center
@@ -92,6 +98,38 @@
 		+r(1023)
 			flex-direction: column
 			padding-bottom: 0
+		.img-info
+			position: absolute
+			padding: 5px 10px
+			background: #199489
+			border-radius: 30px
+			width: 250px
+			text-align: center
+			color: white
+			line-height: 30px
+			font-weight: 700
+			bottom: 100px
+			left: 380px
+			z-index: 10
+			+r(1199)
+				bottom: 80px
+				left: 300px
+			+r(1023)
+				bottom: -430px
+				left: 9px
+			+r(767)
+				bottom: 190px
+				left: 123px
+			+r(639)
+				bottom: 190px
+				left: 60px
+				width: 231px
+				padding: 5px
+			+r(479)
+				bottom: 167px
+				left: 2px
+				width: 203px
+				font-size: 14px
 		.people
 			position: absolute
 			bottom: 0
@@ -142,7 +180,7 @@
 			width: 100%
 			display: flex
 			justify-content: space-between
-			margin-bottom: 25px
+			margin-bottom: 0px
 		+r(767)
 			flex-direction: column
 			width: 60%
@@ -214,10 +252,8 @@
 		color: #444444
 		+r(1023)
 			margin: auto
-			&::before, &::after
-				display: none
-		+r(767)
 			display: none
+
 		.fico
 			position: absolute
 			right: 15px
@@ -461,9 +497,9 @@
 	outline: none
 	cursor: pointer
 	background: linear-gradient(to right, #fd7532, #fb905c 51%, #fd7532)
-	border-radius: 32px
+	border-radius: 43px
 	color: white
-	padding: 10px 0 9px 0
+	padding: 7px 0 14px
 	font-size: 30px
 	font-weight: 700
 	border-bottom: 6px solid #e46324
