--- a/src/style/partials/how-to-use.scss
+++ b/src/style/partials/how-to-use.scss
@@ -59,7 +59,8 @@
 .how-to-use__girl {
   position: absolute;
   bottom: 0;
-  left: 50%;
+  left: 51%;
+  height: 295px;
   transform: translate(-50%);
 }
 
@@ -125,57 +126,77 @@
   .how-to-use__item {
     width: 320px;
   }
+
   .how-to-use__image {
     width: 320px;
   }
+
   .how-to-use__first-pack {
     left: 10px;
   }
+
   .how-to-use__cup {
     left: 110px;
   }
+
   .how-to-use__girl {
     width: 290px;
+    height: auto;
   }
+
   .how-to-use__second-pack {
     left: 46%;
   }
+
   .how-to-use__items {
     left: 49%;
   }
+
   .how-to-use__item-title {
     font-size: 21px;
   }
+
   .how-to-use__title {
     font-size: 36px;
   }
 }
 
 @media (max-width: 1024px) {
+  .how-to-use__title {
+    margin-bottom: 50px;
+  }
+
   .how-to-use__wrap {
     justify-content: space-around;
   }
+
   .how-to-use__image {
     width: 280px;
     height: 300px;
     margin-bottom: 15px;
   }
+
   .how-to-use__item {
     width: 280px;
   }
+
   .how-to-use__first-pack {
     width: 120px;
   }
+
   .how-to-use__cup {
     width: 140px;
     left: 100px;
   }
+
   .how-to-use__girl {
     width: 250px;
   }
+
   .how-to-use__second-pack {
     width: 130px;
   }
+
   .how-to-use__item-title {
     font-size: 19px;
   }
@@ -183,10 +204,12 @@
   .how-to-use__title {
     font-size: 32px;
   }
+
   .how-to-use__item:nth-child(3) {
     margin-top: 50px;
   }
 }
+
 @media (width: 1024px) {
   .how-to-use__item:nth-child(3) {
     margin-top: 0px !important;
@@ -197,13 +220,17 @@
   .how-to-use {
     padding: 30px 0;
   }
+
   .how-to-use__item:nth-child(3) {
     margin-top: 0;
     margin-bottom: 0;
   }
+
+
   .how-to-use__item {
     margin-bottom: 50px;
   }
+
   .how-to-use__title {
     font-size: 29px;
   }
@@ -213,6 +240,7 @@
   .how-to-use {
     padding: 25px 0;
   }
+
   .how-to-use__title {
     font-size: 26px;
   }
