--- a/src/style/partials/parasites.scss
+++ b/src/style/partials/parasites.scss
@@ -2,6 +2,10 @@
   background: #ecf1f1;
   padding: 50px 0;
 
+  .slick-dotted.slick-slider {
+    margin-bottom: 0 !important;
+  }
+
   .slick-next,
   .slick-prev {
     position: absolute;
@@ -44,7 +48,7 @@
 
     .slick-next,
     .slick-prev {
-      top: 307px;
+      top: 287px;
     }
   }
 
@@ -61,6 +65,10 @@
 
 .parasites-title {
   margin-bottom: 40px;
+
+  @include r(1023) {
+    margin-bottom: 20px;
+  }
 
   span {
     display: block;
