--- a/src/template/header.html
+++ b/src/template/header.html
@@ -49,6 +49,7 @@
                Оплата при получении <i class="fico fico-cost"></i>
             </div>
             <img src="img/product.png" alt="product" class="product" />
+            <div class="img-info">разрешен детям от 12 лет</div>
          </div>
          <img src="img/people.png" alt="people" class="people" />
          <div class="order-form">
@@ -86,7 +87,7 @@
                </button>
                <span class="foodnote">* при заказе курса</span>
                <div class="leftovers">
-                  Осталось <span class="lastpack">10</span> упаковок<small>&nbsp;<br />по скидке</small>
+                  Осталось <span class="lastpack">10</span> упаковок<small>&nbsp;<br />со скидкой</small>
                </div>
                <div class="protection">
                   <i class="fico fico-protection"></i> Ваши данные защищены!
