--- a/src/template/infection.html
+++ b/src/template/infection.html
@@ -1,18 +1,18 @@
 <section class="infection block">
     <div class="wrap">
-        <h2 class="title">
+        <h2 class="title wow fadeInDown">
             Заражение паразитами приводит
             к сбою работы организма
         </h2>
         <div class="infection__result">
-            <div class="infection__item">
+            <div class="infection__item wow fadeInDown" data-wow-delay="0.2s">
                 <div class="infection__item-img">
                     <span class="infection__item-img_position">!</span>
                     <img src="img/infection__result-one.png" alt="the fall of immunity">
                 </div>
                 <div class="infection__item-description">
                     <h2 class="infection__item-title">
-                        Падение
+                        Ослабление
                         иммунитета
                     </h2>
                     <p class="infection__item-text">
@@ -21,7 +21,7 @@
                     </p>
                 </div>
             </div>
-            <div class="infection__item">
+            <div class="infection__item wow fadeInDown" data-wow-delay="0.3s">
                 <div class="infection__item-img">
                     <span class="infection__item-img_position">!</span>
                     <img src="img/infection__result-two.png" alt="indigestion">
@@ -38,7 +38,7 @@
                     </p>
                 </div>
             </div>
-            <div class="infection__item">
+            <div class="infection__item wow fadeInDown" data-wow-delay="0.4s">
                 <div class="infection__item-img">
                     <span class="infection__item-img_position">!</span>
                     <img src="img/infection__result-three.png" alt="failure nervouse system">
@@ -56,7 +56,7 @@
                     </p>
                 </div>
             </div>
-            <div class="infection__item">
+            <div class="infection__item wow fadeInDown" data-wow-delay="0.5s">
                 <div class="infection__item-img">
                     <span class="infection__item-img_position">!</span>
                     <img src="img/infection__result-four.png" alt="exacerbation chronic diseases">
@@ -77,7 +77,7 @@
         </div>
         <p class="infection__conclusion">
             Заражение может привести к аллергиям, псориазу, болезням или отказу каждого
-            пораженного органа и&nbsp;даже смерти
+            пораженного органа, и&nbsp;даже смерти
         </p>
     </div>
 </section>
