--- a/src/template/sec11.html
+++ b/src/template/sec11.html
@@ -1,8 +1,8 @@
-<section class="how-to-use">
+<section class="how-to-use block">
   <div class="wrap">
-    <div class="how-to-use__title">Как принимать Helmion</div>
+    <div class="how-to-use__title wow fadeInDown">Как принимать Helmion</div>
     <div class="how-to-use__wrap">
-      <div class="how-to-use__item">
+      <div class="how-to-use__item wow fadeInDown" data-wow-delay="0.2s">
         <div class="how-to-use__image how-to-use__image--first">
           <div class="how-to-use__number">1</div>
           <img src="img/sec11__pack.png" class="how-to-use__first-pack" />
@@ -12,7 +12,7 @@
           Разбавить гель в стакане воды или выпить в чистом виде
         </div>
       </div>
-      <div class="how-to-use__item">
+      <div class="how-to-use__item wow fadeInDown" data-wow-delay="0.3s">
         <div class="how-to-use__image how-to-use__image--second">
           <div class="how-to-use__number">2</div>
           <img src="img/sec11__girl.png" class="how-to-use__girl" />
@@ -22,7 +22,7 @@
           в день
         </div>
       </div>
-      <div class="how-to-use__item">
+      <div class="how-to-use__item wow fadeInDown" data-wow-delay="0.4s">
         <div class="how-to-use__image how-to-use__image--third">
           <div class="how-to-use__number">3</div>
 
