--- a/src/template/sec5.html
+++ b/src/template/sec5.html
@@ -1,13 +1,13 @@
-<section class="methods">
+<section class="methods block">
   <div class="wrap">
-    <div class="methods__title">
+    <div class="methods__title wow fadeInDown">
       Популярные методы лечения или дороги, или бесполезны
     </div>
     <div class="methods__wrap">
-      <div class="methods__item">
+      <div class="methods__item wow fadeInDown" data-wow-delay="0.2s">
         <div class="methods__content">
-          <div class="methods__image-block">
-            <img src="img/methods_grass.png" class="methods__image" />
+          <div class="methods__image-block methods__image-block--first">
+            <img src="img/methods_grass.png" class="methods__image methods__image--first" />
           </div>
           <div class="methods__item-title">Методы на травах</div>
           <div class="methods__text-block">
@@ -24,12 +24,12 @@
 
         <div class="methods__conclusion-block">
           <div>
-            <div class="bold">Малоэффективны:</div>
+            <div class="bold methods__ttl">Малоэффективны:</div>
             практически невозможно подобрать нужный набор трав
           </div>
         </div>
       </div>
-      <div class="methods__item">
+      <div class="methods__item wow fadeInDown" data-wow-delay="0.3s">
         <div class="methods__content">
           <div class="methods__image-block">
             <img src="img/methods_pills.png" class="methods__image methods__image--second" />
@@ -48,7 +48,7 @@
 
         <div class="methods__conclusion-block">
           <div>
-            <div class="bold">Небезопасны:</div>
+            <div class="bold methods__ttl">Небезопасны:</div>
             требуют восстановления иммунитета
           </div>
         </div>
@@ -56,7 +56,7 @@
     </div>
     <div class="methods__bottom-line">
       <div class="bold">В результате</div>
-      вы тратите время, деньги и можете подорвать здоровье
+      вы тратите время, деньги, и можете подорвать здоровье
     </div>
   </div>
 </section>
