add video and audio reviews

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -33,3 +33,6 @@
 @import "partials/footer"
 @import "partials/popup"
 @import "partials/animate"
+@import "partials/youtube"
+@import "partials/audio"
+
