--- a/src/style/partials/order.sass
+++ b/src/style/partials/order.sass
@@ -1,6 +1,5 @@
 .order
-	padding-top: 81px
-	padding-bottom: 76px
+	padding: 70px 0;
 	&-content
 		margin-top: 53px
 		display: flex
@@ -80,8 +79,9 @@
 			transform: translate(-53.5%,-50%)
 	&__btn
 		margin-top: 33px
-		width: 280px
+		width: 294px
 		height: 65px
+		padding: 0 8px
 		display: flex
 		justify-content: center
 		align-items: center
