--- a/src/template/advantages.html
+++ b/src/template/advantages.html
@@ -51,7 +51,7 @@
                </button>
                <span class="foodnote">* при заказе курса</span>
                <div class="leftovers">
-                  Осталось <span class="lastpack">10</span> упаковок<small>&nbsp;<br>по скидке</small>
+                  Осталось <span class="last">12</span> упаковок<small>&nbsp;<br>по скидке</small>
                </div>
                <div class="protection">
                   <i class="fico fico-protection"></i>
