--- a/src/style/partials/components.scss
+++ b/src/style/partials/components.scss
@@ -1,5 +1,5 @@
 .components {
-	padding: 90px 0;
+	padding: 70px 0;
 }
 
 .title-components {
@@ -26,8 +26,9 @@
 	margin-right: 30px;
 	border-radius: 5px;
 	background: #fff;
-	box-shadow: 0 0 10px 0 rgba(59,117,111,.4);
+	box-shadow: 0 0 10px 0 rgba(59, 117, 111, .4);
 	padding: 20px;
+
 	&:last-child {
 		margin-right: 0;
 	}
@@ -46,6 +47,7 @@
 	border-radius: 50%;
 	border: 4px solid #bde6e2;
 	position: absolute;
+
 	img {
 		display: block;
 		max-width: 100%;
@@ -55,8 +57,8 @@
 .components__img-1 {
 	top: 0;
 	left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
+	transform: translateX(-50%);
+	z-index: 1;
 }
 
 .components__img-2 {
@@ -86,6 +88,7 @@
 	display: block;
 	margin-bottom: 38px;
 	position: relative;
+
 	&::before {
 		content: '';
 		width: 10px;
@@ -95,7 +98,7 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%,-50%);
+		transform: translate(-50%, -50%);
 	}
 }
 
@@ -158,7 +161,9 @@
 }
 
 @include r(1023) {
-	.components__action, .components__name {
+
+	.components__action,
+	.components__name {
 		font-size: 17px;
 	}
 
@@ -196,8 +201,8 @@
 	.components__img-1 {
 		top: 0;
 		left: 50%;
-	    transform: translateX(-50%);
-	    z-index: 1;
+		transform: translateX(-50%);
+		z-index: 1;
 	}
 
 	.components__img-2 {
@@ -229,6 +234,7 @@
 
 	.components__item {
 		margin: 30px 10px;
+
 		&:last-child {
 			margin-right: 10px;
 			margin-bottom: 0;
@@ -259,7 +265,7 @@
 
 @include r(479) {
 	.components__bottom {
-	    font-size: 17px;
+		font-size: 17px;
 	}
 
 	.components__group {
@@ -270,12 +276,3 @@
 		font-size: 19px;
 	}
 }
-
-
-
-
-
-
-
-
-
