--- a/src/style/partials/header.sass
+++ b/src/style/partials/header.sass
@@ -469,7 +469,7 @@
 		font-size: 18px
 		color: #444444
 		margin-bottom: 12px
-		.lastpack
+		.last
 			font-weight: 500
 			color: #199589
 	.protection
