--- a/src/template/header.html
+++ b/src/template/header.html
@@ -87,7 +87,7 @@
                </button>
                <span class="foodnote">* при заказе курса</span>
                <div class="leftovers">
-                  Осталось <span class="lastpack">10</span> упаковок<small>&nbsp;<br />со скидкой</small>
+                  Осталось <span class="last">12</span> упаковок<small>&nbsp;<br />со скидкой</small>
                </div>
                <div class="protection">
                   <i class="fico fico-protection"></i> Ваши данные защищены!
